<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="false"

    tools:context="com.example.mutturaj.myweather.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/colorLightBlue"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            app:title="@string/app_name"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            />

        <TextView
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/location"
            android:typeface="serif"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorGrey"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/tvdateandtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/date_and_time"
            android:typeface="normal"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/editText100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/colorLightBlue"
            android:paddingBottom="5dp"

            />
        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/colorGrey"
            android:paddingBottom="5dp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            >


            <TextView
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:text="@string/humidity"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="humidity"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/pressure"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="pressure"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/wind_speed"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="wind"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/editText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/wind_direction"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/editText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="winddirection"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"/>




    </LinearLayout>


</android.support.constraint.ConstraintLayout>
